# serializer version: 1
# name: test_rendered_configuration_matches_the_snapshot[apache-proxy-ssl][apache-proxy-ssl]
  '''
  # Apache reverse proxy configuration for example.com
  # Generated by WASM
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAdmin webmaster@example.com
  
      # Redirect HTTP to HTTPS
      RewriteEngine On
      RewriteCond %{HTTPS} off
      RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:443>
      ServerName example.com
      ServerAdmin webmaster@example.com
  
      # SSL Configuration
      SSLEngine on
      SSLCertificateFile /etc/letsencrypt/live/example.com/fullchain.pem
      SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
      
      # SSL Settings
      SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
      SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384
      SSLHonorCipherOrder off
      SSLSessionTickets off
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Proxy settings
      ProxyPreserveHost On
      ProxyRequests Off
      
      ProxyPass / http://127.0.0.1:3000/
      ProxyPassReverse / http://127.0.0.1:3000/
  
      # WebSocket support
      RewriteEngine On
      RewriteCond %{HTTP:Upgrade} websocket [NC]
      RewriteCond %{HTTP:Connection} upgrade [NC]
      RewriteRule ^/?(.*) "ws://127.0.0.1:3000/$1" [P,L]
  
      # Timeouts
      ProxyTimeout 60
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[apache-proxy-www][apache-proxy-www]
  '''
  # Apache reverse proxy configuration for example.com
  # Generated by WASM
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAlias www.example.com
      ServerAdmin webmaster@example.com
  
      # Redirect HTTP to HTTPS
      RewriteEngine On
      RewriteCond %{HTTPS} off
      RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:443>
      ServerName example.com
      ServerAlias www.example.com
      ServerAdmin webmaster@example.com
  
      # SSL Configuration
      SSLEngine on
      SSLCertificateFile /etc/letsencrypt/live/example.com/fullchain.pem
      SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
      
      # SSL Settings
      SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
      SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384
      SSLHonorCipherOrder off
      SSLSessionTickets off
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Proxy settings
      ProxyPreserveHost On
      ProxyRequests Off
      
      ProxyPass / http://127.0.0.1:3000/
      ProxyPassReverse / http://127.0.0.1:3000/
  
      # WebSocket support
      RewriteEngine On
      RewriteCond %{HTTP:Upgrade} websocket [NC]
      RewriteCond %{HTTP:Connection} upgrade [NC]
      RewriteRule ^/?(.*) "ws://127.0.0.1:3000/$1" [P,L]
  
      # Timeouts
      ProxyTimeout 60
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[apache-proxy][apache-proxy]
  '''
  # Apache reverse proxy configuration for example.com
  # Generated by WASM
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAdmin webmaster@example.com
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Proxy settings
      ProxyPreserveHost On
      ProxyRequests Off
      
      ProxyPass / http://127.0.0.1:3000/
      ProxyPassReverse / http://127.0.0.1:3000/
  
      # WebSocket support
      RewriteEngine On
      RewriteCond %{HTTP:Upgrade} websocket [NC]
      RewriteCond %{HTTP:Connection} upgrade [NC]
      RewriteRule ^/?(.*) "ws://127.0.0.1:3000/$1" [P,L]
  
      # Timeouts
      ProxyTimeout 60
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[apache-static][apache-static]
  '''
  # Apache static site configuration for example.com
  # Generated by WASM
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAdmin webmaster@example.com
  
      # Document root
      DocumentRoot /var/www/apps/example.com/dist
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Directory options
      <Directory /var/www/apps/example.com/dist>
          Options -Indexes +FollowSymLinks
          AllowOverride All
          Require all granted
          
          # SPA support - rewrite to index.html
          RewriteEngine On
          RewriteBase /
          RewriteRule ^index\.html$ - [L]
          RewriteCond %{REQUEST_FILENAME} !-f
          RewriteCond %{REQUEST_FILENAME} !-d
          RewriteRule . /index.html [L]
      </Directory>
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Cache static assets
      <FilesMatch "\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$">
          Header set Cache-Control "public, max-age=31536000, immutable"
      </FilesMatch>
  
      # Compression
      <IfModule mod_deflate.c>
          AddOutputFilterByType DEFLATE text/html text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml
      </IfModule>
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-proxy-ssl][nginx-proxy-ssl]
  '''
  # Nginx reverse proxy configuration for example.com
  # Generated by WASM
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      # Redirect HTTP to HTTPS (except ACME challenges)
      location / {
          return 301 https://$host$request_uri;
      }
  }
  
  server {
      listen 443 ssl http2;
      listen [::]:443 ssl http2;
      server_name example.com;
  
      # SSL Configuration
      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
      
      # SSL Settings
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_prefer_server_ciphers off;
      ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
      ssl_session_timeout 1d;
      ssl_session_cache shared:SSL:50m;
      ssl_stapling on;
      ssl_stapling_verify on;
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Proxy settings
      location / {
          proxy_pass http://127.0.0.1:3000;
          proxy_http_version 1.1;
          
          # Headers
          proxy_set_header Host $host;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Forwarded-Proto $scheme;
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Forwarded-Port $server_port;
          
          # WebSocket support
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          
          # Timeouts
          proxy_connect_timeout 60s;
          proxy_send_timeout 60s;
          proxy_read_timeout 60s;
          
          # Buffer settings
          proxy_buffering on;
          proxy_buffer_size 128k;
          proxy_buffers 4 256k;
          proxy_busy_buffers_size 256k;
      }
  
  }
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-proxy-www][nginx-proxy-www]
  '''
  # Nginx reverse proxy configuration for example.com
  # Generated by WASM
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com www.example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      # Redirect HTTP to HTTPS (except ACME challenges)
      location / {
          return 301 https://$host$request_uri;
      }
  }
  
  server {
      listen 443 ssl http2;
      listen [::]:443 ssl http2;
      server_name example.com www.example.com;
  
      # SSL Configuration
      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
      
      # SSL Settings
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_prefer_server_ciphers off;
      ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
      ssl_session_timeout 1d;
      ssl_session_cache shared:SSL:50m;
      ssl_stapling on;
      ssl_stapling_verify on;
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Proxy settings
      location / {
          proxy_pass http://127.0.0.1:3000;
          proxy_http_version 1.1;
          
          # Headers
          proxy_set_header Host $host;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Forwarded-Proto $scheme;
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Forwarded-Port $server_port;
          
          # WebSocket support
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          
          # Timeouts
          proxy_connect_timeout 60s;
          proxy_send_timeout 60s;
          proxy_read_timeout 60s;
          
          # Buffer settings
          proxy_buffering on;
          proxy_buffer_size 128k;
          proxy_buffers 4 256k;
          proxy_busy_buffers_size 256k;
      }
  
  }
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-proxy][nginx-proxy]
  '''
  # Nginx reverse proxy configuration for example.com
  # Generated by WASM
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Proxy settings
      location / {
          proxy_pass http://127.0.0.1:3000;
          proxy_http_version 1.1;
          
          # Headers
          proxy_set_header Host $host;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Forwarded-Proto $scheme;
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Forwarded-Port $server_port;
          
          # WebSocket support
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          
          # Timeouts
          proxy_connect_timeout 60s;
          proxy_send_timeout 60s;
          proxy_read_timeout 60s;
          
          # Buffer settings
          proxy_buffering on;
          proxy_buffer_size 128k;
          proxy_buffers 4 256k;
          proxy_busy_buffers_size 256k;
      }
  
  }
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-static][nginx-static]
  '''
  # Nginx static site configuration for example.com
  # Generated by WASM
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
  
      # Document root
      root /var/www/apps/example.com/dist;
      index index.html index.htm;
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Cache static assets
      location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
          expires 1y;
          add_header Cache-Control "public, immutable";
          access_log off;
      }
  
      # SPA support - try files then fallback to index.html
      location / {
          try_files $uri $uri/ /index.html;
      }
  
      # Deny access to hidden files
      location ~ /\. {
          deny all;
          access_log off;
          log_not_found off;
      }
  }
  '''
# ---
